[package]
name = "jss"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "Create dynamic css easily using json notation"
repository = "https://github.com/ivanceras/jss"
documentation = "https://docs.rs/jss"
readme = "README.md"
keywords = ["html", "css", "web"]
edition = "2018"
version = "0.3.2"


[badges]
maintenance = { status = "actively-developed" }

[dependencies]
json = "0.12"
once_cell = "1.8"
log = { version = "0.4"}

[features]
default = []
strict = [] # panic if the used style is not on the listed IDENT_STYLE
