[package]
name = "jss"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "Create dynamic css easily using json notation"
repository = "https://github.com/ivanceras/jss"
documentation = "https://docs.rs/jss"
readme = "README.md"
keywords = ["html", "css", "web"]
edition = "2021"
version = "0.5.1"


[badges]
maintenance = { status = "actively-developed" }

[dependencies]
json = "0.12"
once_cell = "1.8"
log = { version = "0.4"}
phf = { version = "0.10.0", features = ["macros"] }
pom = "3.2.0"

[features]
default = []
strict = [] # panic if the used style is not on the listed IDENT_STYLE
